--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,15 @@
 canvas {
     border: 1px solid black;
+    padding: 0;
+    margin: auto;
+    display: block;
+    width: 800px;
 }
 
 img {
     display: none;
+}
+
+body {
+    background-color: black;
 }
